<resources>
    <string name="app_name">PassPlateform</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Start screen-->
    <string name="lbl_recently_open">Recently openned database</string>
    <string name="lbl_recently_open_none">No recently openned database</string>
    <string name="btn_open_db">Open database</string>
    <string name="img_lock">Database state</string>

    <!-- OpenDb fragment-->
    <string name="lbl_choose_provider">Choose the keepass database provider</string>
    <string name="lbl_dialog_pick_file_error">You didn\'t pick a file, or pick an invalid keepass file.</string>

    <!-- Explorer fragment -->
    <string name="hint_password">Database password</string>
    <string name="btn_password">Go</string>
    <string name="lbl_file_title">Title</string>
    <string name="lbl_file_username">Username</string>
    <string name="lbl_file_password">Password</string>
    <string name="lbl_file_notes">Note</string>

    <!-- Providers-->
    <string name="provider_filesystem">File System</string>
    <string name="provider_gdrive">Google Drive</string>
    <string name="provider_http">HTTP</string>
    <string name="provider_ssh">SSH</string>

    <!-- Transition name -->
    <string name="transition_title">titleTransition</string>
</resources>
