<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/text_view_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_small"
        android:text="@string/app_name"
        android:textColor="@color/design_default_color_on_primary"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:transitionName="@string/transition_title"/>

    <Button
        android:id="@+id/button_open_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_small"
        android:text="@string/btn_open_db" />

    <TextView
        android:id="@+id/text_view_recently_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_small"
        android:text="@string/lbl_recently_open_none"
        android:textColor="@color/design_default_color_on_primary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_recently_open"
        android:layout_marginStart="@dimen/default_medium"
        android:layout_marginEnd="@dimen/default_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>