<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/text_view_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_small"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:transitionName="@string/transition_title" />

    <TextView
        android:id="@+id/text_view_explorer_db_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="@dimen/default_small" />

    <TextView
        android:id="@+id/text_view_explorer_keepath_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_marginBottom="@dimen/default_small" />

    <LinearLayout
        android:id="@+id/layout_container_file_field"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/default_medium"
        android:layout_marginEnd="@dimen/default_medium"
        android:layout_marginBottom="@dimen/default_small"
        android:background="@drawable/shape_popup_fragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_file_username"/>

        <TextView
            android:id="@+id/textview_file_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_file_password"/>

        <TextView
            android:id="@+id/textview_file_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_file_notes"/>

        <TextView
            android:id="@+id/textview_file_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>