<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/text_view_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_small"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:transitionName="@string/transition_title" />

    <TextView
        android:id="@+id/text_view_choose_provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_choose_provider"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_marginTop="@dimen/default_small"
        android:layout_marginBottom="@dimen/default_medium" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_providers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_margin="@dimen/default_medium"
        android:id="@+id/loading_file_worker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>