<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/text_view_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_small"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:transitionName="@string/transition_title" />

    <TextView
        android:id="@+id/text_view_explorer_db_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="@dimen/default_small"
        android:layout_marginBottom="@dimen/default_medium" />

    <LinearLayout
        android:id="@+id/layout_container_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_popup_fragment"
        android:layout_marginStart="@dimen/default_medium"
        android:layout_marginEnd="@dimen/default_medium"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_database_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_small"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_password" />

    </LinearLayout>
</LinearLayout>